--- a/Web Files/bootstrap/css/bootstrap.css
+++ b/Web Files/bootstrap/css/bootstrap.css
@@ -82,6 +82,22 @@
   width: 2000px;
   height:2000px;
 }
+/*템플릿 박스*/
+.templete{
+  padding: 1rem;  
+  position:sticky;
+  top:50px;
+  height: 60%;
+  background-color: teal;
+
+}
+.form1{
+  background-color: green;
+  display: inline-block;
+  width:50px;
+  height: 50px;
+  z-index: 99; 
+}
 
 /*svg용 스크롤 바 */
 .chatbot_Flow::-webkit-scrollbar {width: 10px; height: 10px; background-color: #f5f5f5; }
