--- a/Web Files/bootstrap/css/bootstrap.css
+++ b/Web Files/bootstrap/css/bootstrap.css
@@ -5,6 +5,26 @@
  */
 
 /*! normalize.css v3.0.2 | MIT License | git.io/normalize */
+/*nav 프로필 영역 */
+.navbar-profile, .navbar-profile:visited, .navbar-profile:active{
+  color: whitesmoke;
+}
+.navbar-profile:hover {
+  color: #aaaaaa;
+}
+
+.navbar-proimg {
+  width: 30px;
+  height: 30px;
+  float: right;
+  margin-top: 10px!important;
+  margin-bottom: 10px!important;
+  border-radius:20px;
+  background-color:#aaaaaa;
+  margin:10px;
+}
+
+
 /* 레이아웃 */
 .wrapper{
   height: 100%;
@@ -17,10 +37,21 @@
   height:100%;
   overflow:hidden;
 }
+.elements_section {
+  top:150px;
+  background-color: #000000;
+  overflow-x: hidden;
+  overflow-y: scroll;
+  position:sticky;
+
+  margin:3px;
+  height:75%;
+}
 
 .section2 {
   float:left;
-  background-color: #bbbbbb;
+  background-color: #eeeeee;
+
 
 
   height:100%;
@@ -35,20 +66,24 @@
   width:400px;
   height:100%;
   overflow:hidden;
+
 }
 
 .chatbot_Flow {
-  margin-top: 87px;
+  margin-top: 150px;
   display : block;
-  border: 1px solid black;
+  border: 1px solid #dddddd;
   overflow: hidden;
-  height: 90%;
+  height: 80%;
   background-color: #e3e3e3;
   overflow-x: scroll;
   overflow-y:scroll;
   position:sticky;
   background-image: url("bg.jpg");
-  width: 100%;
+  width: 90%;
+
+  margin-left:5%;
+  margin-right:5%;
 }
 
 
@@ -72,7 +107,7 @@
 
 .tool{
   position:sticky;
-  top: 50px;
+  top: 250px;
   width: 100%;
   background-color:#ffffcc;
   height:175px;
@@ -84,10 +119,7 @@
 }
 /*템플릿 박스*/
 .templete{
-  padding: 1rem;  
-  position:sticky;
-  top:50px;
-  height: 60%;
+  height: 1200px;
   background-color: teal;
 
 }
@@ -96,16 +128,17 @@
   display: inline-block;
   width:50px;
   height: 50px;
-  z-index: 99; 
+  z-index: 99;
 }
 
 /*svg용 스크롤 바 */
-.chatbot_Flow::-webkit-scrollbar {width: 10px; height: 10px; background-color: #f5f5f5; }
+.elements_section::-webkit-scrollbar, .chatbot_Flow::-webkit-scrollbar {width: 10px; height: 10px; background-color: #f5f5f5; }
 .chatbot_Flow::-webkit-scrollbar-button:start:decrement,
-.chatbot_Flow::-webkit-scrollbar-button:end:increment {display: block; width: 0px;height: 0px;}
-.chatbot_Flow::-webkit-scrollbar-track {  background: rgba(0,0,0,.05); }
-.chatbot_Flow::-webkit-scrollbar-thumb {  border-radius: 10px; background-color : rgb(0,0,0,0.3);  }
-.chatbot_Flow::-webkit-scrollbar-thumb:hover { background-color : rgb(28,58,148);  }
+.elements_section::-webkit-scrollbar-button:end:increment, .chatbot_Flow::-webkit-scrollbar-button:end:increment {display: block; width: 0px;height: 0px;}
+.elements_section::-webkit-scrollbar-track, .templete.chatbot_Flow::-webkit-scrollbar-track {  background: rgba(0,0,0,.05); }
+.elements_section::-webkit-scrollbar-thumb, .chatbot_Flow::-webkit-scrollbar-thumb {  border-radius: 10px; background-color : rgb(0,0,0,0.3);  }
+.elements_section::-webkit-scrollbar-thumb:hover, .chatbot_Flow::-webkit-scrollbar-thumb:hover { background-color : rgb(28,58,148);  }
+
 
 html {
   font-family: sans-serif;
@@ -4257,7 +4290,8 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
 .navbar-profile {
   float: right;
   height: 50px;
-  padding: 15px 15px;
+  padding-top: 15px;
+  padding-bottom: 15px;
   font-size: 18px;
   font-weight:500;
 }
