--- a/Web Files/bootstrap/css/bootstrap.css
+++ b/Web Files/bootstrap/css/bootstrap.css
@@ -118,11 +118,21 @@
   height:2000px;
 }
 /*템플릿 박스*/
-.templete{
+.templetebox{
   height: 1200px;
   background-color: teal;
+}
+
+.templete{
+  background-color: green;
+  display: inline-block; 
+  width: 50px;
+  height:50px;
+  margin: 30px; 
+
 
 }
+
 .form1{
   background-color: green;
   display: inline-block;
