--- a/Web Files/bootstrap/css/bootstrap.css
+++ b/Web Files/bootstrap/css/bootstrap.css
@@ -80,6 +80,28 @@
 
 }
 
+.preview {
+    width: 350px;
+    margin:25px;
+    height:600px;
+    top:100px;
+    position: relative;
+    background: #fff;
+}
+
+.message {
+    position: fixed;
+    width:80px;
+    height:80px;
+    bottom: 10px;
+    right: 10px;
+    border-radius: 40px;
+    background-color: #9acfea;
+    padding:15px;
+}
+.message:hover {
+    background-color:#2b669a;
+}
 .chatbot_Flow {
   margin-top: 150px;
   display : block;
