--- a/Web Files/bootstrap/css/bootstrap.css
+++ b/Web Files/bootstrap/css/bootstrap.css
@@ -141,20 +141,22 @@
   margin: 5px 10px 0px 25px;
 }
 .templete1-body{
+  margin-top: 20px;
   border: solid 1px grey;
   background-color: lavender;
   text-align: center;
   width: 130px;
   height: 70px;
   border-radius: 10px;
-  padding: 0px 10px 40px 20px;
-  display: flex;
-  flex-direction: column;
+  display: inline-block;
 }
 .templete1-text{
   background-color: #f1f0f0;
   border-radius: 10px;
-  width: 90%;
+  width: 70%;
+  display: block;
+  position: relative;
+  margin: 0px 0px 0px 20px;  
 }
 .templete1-uparrow{
   border-radius: 70px;
@@ -162,20 +164,18 @@
   width: 20%;
   display: inline-block;
   text-align: center;
-  margin: 0px 10px 0px 35px;
   position: relative;
   top: -10px;
-  
 }
 .templete1-downarrow{
   border-radius: 70px;
   background-color: #f1f0f0;
   width: 20%;
-  display: inline-block;
   text-align: center;
-  margin: 10px 0px 0px 35px;
+  display: inline-block;
   position: relative;
-  bottom: -5px;
+  bottom: -15px;
+
 
 }
 .templete2-body{
