드래그시 이격 발생하는 문제 해결
position: realative ->position: absolute

--- a/Web Files/bootstrap/css/bootstrap.css
+++ b/Web Files/bootstrap/css/bootstrap.css
@@ -149,7 +149,7 @@
   height: 70px;
   border-radius: 10px;
   display: inline-block;
-  position: relative;
+  position: absolute;
 }
 .templete1-text{
   background-color: #f1f0f0;
