--- a/Web Files/bootstrap/css/bootstrap.css
+++ b/Web Files/bootstrap/css/bootstrap.css
@@ -40,7 +40,8 @@
 }
 .elements_section {
   top:100px;
-  background-color: #eeeeee;
+  border: 1px solid black;
+  background-color: #ffffff;
   overflow-x: hidden;
   overflow-y: scroll;
   position:sticky;
@@ -271,14 +272,22 @@
 /*템플릿 박스*/
 
 .templete{
-    border: 1px solid black;
-  background-color: #ffffff;
+  background-color: #eeeeee;
   display: inline-block; 
   width: 110px;
   height:110px;
   margin: 10px;
   border-radius:10px;
+  padding:10px;
 }
+
+.templete:hover {
+  box-shadow: 2px 2px 2px 2px lightgray;
+  font-weight: bold;
+  background-color:#ffffff;
+
+}
+
 
 .templete_adv {
   background-color: lavender;
@@ -307,9 +316,36 @@
 .elements_section::-webkit-scrollbar-thumb, .chatbot_Flow::-webkit-scrollbar-thumb {  border-radius: 10px; background-color : rgb(0,0,0,0.3);  }
 .elements_section::-webkit-scrollbar-thumb:hover, .chatbot_Flow::-webkit-scrollbar-thumb:hover { background-color : rgb(28,58,148);  }
 
+/* 요소 아이콘 디자인 */
+#text_icon {
+  margin-top: 5px;
+  margin-bottom: 10px;
+  width: 90px;
+  height: 50px;
+  background-color:#dddddd;
+  color:#cccccc;
+  border-radius: 1px;
+}
+
+#text:hover #text_icon {
+  -webkit-transition-property: background-color, color;
+  -webkit-transition-duration: 0.5s;
+  transtition-property: backgorund-color, color;
+  transition-duration: 0.5s;
+  background-color : #ffffff;
+  box-shadow: 1px 1px 1px 1px rgba(0,0,0,0.1);
+  color: rgb(255,192,0);
+}
+
+#list_icon {
+  margin-top: 5px;
+  margin-bottom: 10px;
+  width: 90px;
+  height: 50px;
+  border : 1px solid gray;
+}
 
 html {
-  font-family: sans-serif;
   -webkit-text-size-adjust: 100%;
       -ms-text-size-adjust: 100%;
   height:100%;
