--- a/Web Files/bootstrap/css/bootstrap.css
+++ b/Web Files/bootstrap/css/bootstrap.css
@@ -317,7 +317,7 @@
 .elements_section::-webkit-scrollbar-thumb:hover, .chatbot_Flow::-webkit-scrollbar-thumb:hover { background-color : rgb(28,58,148);  }
 
 /* 요소 아이콘 디자인 */
-#text_icon {
+.icon {
   margin-top: 5px;
   margin-bottom: 10px;
   width: 90px;
@@ -327,7 +327,9 @@
   border-radius: 1px;
 }
 
-#text:hover #text_icon {
+/*1. 텍스트 아이콘 */
+
+#text:hover .icon {
   -webkit-transition-property: background-color, color;
   -webkit-transition-duration: 0.5s;
   transtition-property: backgorund-color, color;
@@ -337,14 +339,52 @@
   color: rgb(255,192,0);
 }
 
-#list_icon {
-  margin-top: 5px;
-  margin-bottom: 10px;
-  width: 90px;
-  height: 50px;
-  border : 1px solid gray;
+
+/*2. 리스트 아이콘 */
+
+
+.list_ex {
+  display: inline-block;
+  margin: 3px;
+  width: 18px;
+  height: 10px;
+  background-color:#cccccc;
+  border-radius: 3px;
 }
 
+#list:hover .icon {
+  -webkit-transition-property: background-color, color;
+  -webkit-transition-duration: 0.5s;
+  transtition-property: backgorund-color, color;
+  transition-duration: 0.5s;
+  background-color : #ffffff;
+  box-shadow: 1px 1px 1px 1px rgba(0,0,0,0.1);
+  color: rgb(255,192,0);
+}
+
+#list:hover #ex_1 {
+  -webkit-transition-property: background-color;
+  -webkit-transition-duration: 0.5s;
+  transtition-property: backgorund-color;
+  transition-duration: 0.5s;
+  background-color : rgb(255,128,128);
+}
+
+#list:hover #ex_2 {
+  -webkit-transition-property: background-color;
+  -webkit-transition-duration: 0.5s;
+  transtition-property: backgorund-color;
+  transition-duration: 0.5s;
+  background-color : rgb(255,127,39);
+}
+
+#list:hover #ex_3 {
+  -webkit-transition-property: background-color;
+  -webkit-transition-duration: 0.5s;
+  transtition-property: backgorund-color;
+  transition-duration: 0.5s;
+  background-color : rgb(255,201,14);
+}
 html {
   -webkit-text-size-adjust: 100%;
       -ms-text-size-adjust: 100%;
