--- a/Web Files/bootstrap/css/bootstrap.css
+++ b/Web Files/bootstrap/css/bootstrap.css
@@ -140,6 +140,8 @@
   padding: 20px;
   text-align: center;
   position: absolute;
+  left: 300px;
+  border: solid 1px grey;
 }
 .entry-body{
   background-color: lavender;
@@ -186,8 +188,34 @@
   display: inline-block;
   position: relative;
   bottom: -15px;
-
-
+}
+.templete2_1{
+  background-color: lavender;
+  border: solid 1px grey;
+  border-radius: 10px;
+  display: inline-block;
+  position: absolute;
+  padding: 10px 15px 30px 15px;
+}
+.templete2-head{
+  background-color: #f1f0f0;
+  border-radius: 10px;
+  width: 100%;
+  display: block;
+  position: relative;
+  text-align: center;
+}
+.templete2-button{
+  background-color: #f1f0f0;
+  border-radius: 10px;
+  width: 50px;
+  height: 50px;
+  display: inline-block;
+  position: relative;
+  margin-top: 10px;
+  margin-left: 5px;
+  padding-top: 15px;
+  text-align: center;
 }
 .templete2-body{
   border: solid 1px grey;
@@ -232,6 +260,8 @@
   margin: 0px 60px;
   position: absolute;
 }
+
+
 /* 반응형 레이아웃 */
 @media screen and (max-width: 768px){   /*전체 창크기 750px 이하이면 sec1, 3숨기고 2를 100%로로 */
   .section1{
