--- a/Web Files/bootstrap/css/bootstrap.css
+++ b/Web Files/bootstrap/css/bootstrap.css
@@ -277,13 +277,14 @@
   margin: 10px;
   border-radius:10px;
   padding:10px;
+  color: #cccccc;
 }
 
 .templete:hover {
   box-shadow: 2px 2px 2px 2px lightgray;
   font-weight: bold;
   background-color:#ffffff;
-
+  color: #000000;
 }
 
 
