--- a/Web Files/bootstrap/css/icon.css
+++ b/Web Files/bootstrap/css/icon.css
@@ -200,3 +200,73 @@
     transition-duration: 0.5s;
     color: rgb(40,81,81);
 }
+
+/* 6. 파일 */
+#file_i {
+    position: relative;
+    top:17px;
+    left:27.5px;
+    width:35px;
+    height:25px;
+    background-color: #aaaaaa;
+    z-index:3
+}
+
+#file_i:before{
+    content:'';
+    position: absolute;
+    top: -5px;
+    left: 20px;
+    border-left: 7px solid transparent;
+    border-bottom: 7px solid #aaa;
+}
+
+#file_i:after{
+    content:'';
+    position: absolute;
+    top: -5px;
+    left: 27px;
+    width: 8px;
+    height: 5px;
+    background-color: #aaaaaa;
+}
+
+#infile {
+    position: relative;
+    top: -5px;
+    left:32.5px;
+    width:25px;
+    height:20px;
+    background-color:#fff;
+    z-index:2;
+    border: 1px solid #999999;
+}
+
+#file:hover .icon{
+    transtition-property: background-color, border;
+    transition-duration: 0.5s;
+    background-color:#fff;
+    box-shadow: 1px 1px 1px 1px rgba(0,0,0,0.1);
+}
+
+#file:hover #file_i{
+    transtition-property: background-color;
+    transition-duration: 0.5s;
+    background-color:rgb(239,228,176);
+    box-shadow: 1px 1px 1px 1px rgba(0,0,0,0.1);
+}
+#file:hover #file_i:after{
+    transtition-property: background-color;
+    transition-duration: 0.5s;
+    background-color:rgb(239,228,176);
+}
+#file:hover #file_i:before{
+    transtition-property: border;
+    transition-duration: 0.5s;
+    border-bottom: 7px solid rgb(239,228,176);
+}
+#file:hover #infile{
+    transition-property: top;
+    transition-duration: 0.5s;
+    top: -18px;
+}
