--- a/Web Files/bootstrap/css/bootstrap.css
+++ b/Web Files/bootstrap/css/bootstrap.css
@@ -347,12 +347,34 @@
 
 
 /* 기본요소 접기 */
-#fold_normal {
+.fold_normal {
   display: inline;
-  position:relative;
-  left: 70px;
+  position:absolute;
+  left: 20px;
+  top:24px;
+  width: 0px;
+  height: 16px;
+  border-top:8px solid #999999;
+  border-right: 8px solid transparent;
+  border-left: 8px solid  transparent;
 }
 
+.fold_normal2{
+  display: none;
+  position:absolute;
+  left: 20px;
+  top:18px;
+  width: 0px;
+  height: 14px;
+  border-bottom:8px solid #999999;
+  border-right: 8px solid transparent;
+  border-left: 8px solid  transparent;
+}
+
+
+#template, #adv_template {
+  overflow: hidden;
+}
 
 
 
