--- a/Web Files/bootstrap/css/bootstrap.css
+++ b/Web Files/bootstrap/css/bootstrap.css
@@ -154,14 +154,15 @@
 .main {
   position:relative;
   top:50px;
-  background-color: lavender;
+  background-color: #ddd;
   height:100%;
 }
 .main_dis {
   position:relative;
   top:0px;
-  background-color: #999;
-  height: 100px;
+  background-color: #fff;
+  border-bottom: 1px solid #ddd;
+  height: 50px;
 }
 .main_flow {
   padding-top:1%;
@@ -171,33 +172,42 @@
   width:58px;
   height:23px;
   top:0px;
-  left:2%;
+  left:1%;
 
 }
+
+
 .zoom > div {
   display: inline-block;
   position:relative;
   text-align: center;
   width:27px;
   height:23px;
-  background-color:skyblue;
+  background-color:#fff;
+  border-radius: 10px;
+  border: 5px solid #aaa;
+  font-weight: 900;
+  color: #777;
+  background-color:#ddd;
+
 }
 .chatbot_Flow {
   display : block;
   border: 1px solid #dddddd;
   overflow: hidden;
-  height: 77%;
+  height: 85%;
   background-color: #ffffff;
   overflow-x: scroll;
   overflow-y:scroll;
   position:absolute;
   background-image: url("./images/bg.jpg");
   background-repeat: repeat;
-  width: 96%;
+  width: 98%;
   zoom: 100%;
-  margin-left:2%;
-  margin-right:2%;
+  margin-left:1%;
+  margin-right:1%;
 }
+
 .entry{
   width: 70px;
   height: 70px;
@@ -324,6 +334,7 @@
     width:calc(100% - 700px);
   }
 }
+
 
 
 .tool{
