--- a/Web Files/bootstrap/css/bootstrap.css
+++ b/Web Files/bootstrap/css/bootstrap.css
@@ -50,6 +50,18 @@
   background-color: #fff;
   text-align: center;
 }
+.selection3_tag {
+  position: absolute;
+  top:50px;
+  right: 60px;
+  height:55px;
+  width: 292px;
+  padding-left: 3px;
+  padding-right: 3px;
+  border-radius: 8px;
+  background-color: #fff;
+  text-align: center;
+}
 .elements {
   position:relative;
   height:870px;
@@ -68,7 +80,24 @@
   background-color: rgba(255,192,0, 0.2);
   transition-duration: 0.5s;
 }
-
+.select3_element {
+  display: inline-block;
+  border: 1px solid #000;
+  position:relative;
+  top: 10px;
+  height:90%;
+  width:40%;
+  border-radius:5px;
+  padding-top:6px;
+  font-size: 18px;
+  background-color: rgba(255,192,0, 0.2);
+  transition-duration: 0.5s;
+}
+.section3-clicked{
+  top: 5px;
+  font-weight: bold;
+  background-color: rgb(255, 192, 0);
+}
 #s_all {
   top:0px;
   font-weight: bold;
@@ -134,6 +163,14 @@
   border-top-left-radius: 5px;
   transition: width 2s;
 }
+.attribute {
+  width: 350px;
+  margin:25px;
+  height:600px;
+  top:100px;
+  position: relative;
+  border : 1px solid dimgray;
+}
 .preview {
     width: 350px;
     margin:25px;
@@ -142,6 +179,7 @@
     position: relative;
     border : 1px solid dimgray;
     background: lightyellow;
+    display: none;
 }
 
 .message {
@@ -302,7 +340,43 @@
   padding-top: 15px;
   text-align: center;
 }
+.img{
+  background-color: lavender;
+  border: solid 1px grey;
+  border-radius: 10px;
+  display: inline-table;
+  position: absolute;
+  padding: 15px 15px 20px 15px;
+}
+.img-head{
+  background-color: #f1f0f0;
+  border-radius: 10px;
+  width: 250px;
+  display: block;
+  position: relative;
+  margin-left: 10px;
+  text-align: center;
+}
+.img-button{
+  background-color: #f1f0f0;
+  border-radius: 10px;
+  width: 250px;
+  height: 150px;
+  display: inline-block;
+  position: relative;
+  margin-top: 10px;
+  text-align: center;
+  margin-left: 7px;
+}
+.profile-pic {
+  width: 100%;
+  height: 100%;
+  display: none;
+}
 
+.file-upload {
+  display: none;
+}
 .uparrow{
   position: relative;
   top: -5px;
@@ -3066,9 +3140,9 @@ input[type="checkbox"] {
   margin-top: 1px \9;
   line-height: normal;
 }
-input[type="file"] {
+/* input[type="file"] {
   display: block;
-}
+} */
 input[type="range"] {
   display: block;
   width: 100%;
