--- a/Web Files/bootstrap/css/bootstrap.css
+++ b/Web Files/bootstrap/css/bootstrap.css
@@ -50,7 +50,7 @@
   background-color: #fff;
   text-align: center;
 }
-.selection3_tag {
+.section3_tag {
   position: absolute;
   top:50px;
   right: 60px;
