--- a/Web Files/bootstrap/css/bootstrap.css
+++ b/Web Files/bootstrap/css/bootstrap.css
@@ -320,6 +320,14 @@
   font-weight: bold;
   padding: 4px;
 }
+
+.img_name {
+  position: relative;
+  top: -45px;
+  left: -16px;
+  background-color: rgb(0,0,0,0.1);
+
+}
 .text_name > [contenteditable="true"]:focus {
   outline: 0px;
 }
@@ -428,13 +436,12 @@
   background-color:rgb(255,233,233);
   color:rgb(128,0,0);
 }
-.img{
-  background-color: lavender;
+.svg-foreign > .img{
+  background-color: #fff;
   border: solid 1px grey;
   border-radius: 10px;
   display: inline-table;
   position: absolute;
-  padding: 15px 15px 20px 15px;
   z-index: 1;
 }
 .img-head{
@@ -449,13 +456,19 @@
 .img-button{
   background-color: #f1f0f0;
   border-radius: 10px;
-  width: 250px;
-  height: 150px;
+  min-width: 100px;
+  min-height: 150px;
+  width: auto;
+  height: auto;
+  max-width: 300px;
+  max-height: 500px;
   display: inline-block;
   position: relative;
-  margin-top: 10px;
   text-align: center;
-  margin-left: 7px;
+  padding:2px;
+}
+.img-button > profile-pic {
+  border-radius: 10px;
 }
 .profile-pic {
   width: 100%;
