--- a/Web Files/bootstrap/css/bootstrap.css
+++ b/Web Files/bootstrap/css/bootstrap.css
@@ -323,10 +323,6 @@
 
 .img_name {
   position: relative;
-  top: -45px;
-  left: -16px;
-  background-color: rgb(0,0,0,0.1);
-
 }
 .text_name > [contenteditable="true"]:focus {
   outline: 0px;
@@ -456,12 +452,8 @@
 .img-button{
   background-color: #f1f0f0;
   border-radius: 10px;
-  min-width: 100px;
-  min-height: 150px;
-  width: auto;
-  height: auto;
-  max-width: 300px;
-  max-height: 500px;
+  width: 160px;
+  height: 120px;
   display: inline-block;
   position: relative;
   text-align: center;
